--- a/src/app/pages/dashboard/total-chart/total-chart.component.scss
+++ b/src/app/pages/dashboard/total-chart/total-chart.component.scss
@@ -1,19 +1,5 @@
-.pie-chart-item {
-  display: flex;
-  flex-direction: row;
-  font-size: 1.2rem;
-  .chart {
-    font-size: 2.5rem;
-  }
-  .description-stats {
-    font-size: 1.5rem;
-
-  }
-}
-
-.block-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 10px;
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 2px;
 }
