added auth, http, soap services

--- a/src/app/theme/sass/conf/colorSchemes/_ng2.scss
+++ b/src/app/theme/sass/conf/colorSchemes/_ng2.scss
@@ -61,7 +61,7 @@ $danger-bg: tint($danger, 20%);
 $activelink: #285eb8;
 $hoverlink: darken($activelink, 20%);
 
-// main background
+// totals background
 @mixin body-bg() {
   background-color: $body-bg;
 
