--- a/src/app/pages/dashboard/total-items-chart/total-items-chart.component.html
+++ b/src/app/pages/dashboard/total-items-chart/total-items-chart.component.html
@@ -1,7 +1,7 @@
 <div class="row pie-charts" *ngIf="totals">
   <ba-card *ngFor="let total of totals" class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-12">
     <div class="pie-chart-item">
-      <a class="route" [routerLink]="'dashboard/details'+total.key"></a>
+      <a class="route" [routerLink]="details" [queryParams]="{type: total.key}"></a>
       <div class="chart block-item">
         <span [ngClass]="total.icon"></span>
       </div>
