--- a/src/app/theme/sass/bootstrap-overrides/_card.scss
+++ b/src/app/theme/sass/bootstrap-overrides/_card.scss
@@ -54,7 +54,7 @@ $card-header-font-size: 16px;
 
 .card {
   > .card-body {
-    padding: 15px 22px;
+    padding: 15px;
     height: 100%;
   }
   > .card-header {
