added pie charts

--- a/src/app/theme/sass/conf/colorSchemes/_ng2.scss
+++ b/src/app/theme/sass/conf/colorSchemes/_ng2.scss
@@ -1,5 +1,5 @@
 @import "../variables";
-$default: #333333; // default colors for layout
+$default: #ffffff; // default colors for layout
 $body-bg: #F0F3F4; // default bg color
 
 $default-text: $default; // default text color layout (usually is the same as $default)
