--- a/src/app/pages/main-dashboard/dashboard.html
+++ b/src/app/pages/main-dashboard/dashboard.html
@@ -1,3 +1,16 @@
+<div class="row pie-charts" *ngIf="totals">
+  <ba-card *ngFor="let total of totals" class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-12">
+    <div class="pie-chart-item">
+      <div class="chart block-item">
+        <span [ngClass]="total.icon"></span>
+      </div>
+      <div class="description block-item">
+        <div translate>{{ total.description }}</div>
+      </div>
+      <div class="description-stats block-item">{{total.value}}</div>
+    </div>
+  </ba-card>
+</div>
 <div class="row">
   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
     <ngx-charts-area-chart
@@ -17,6 +30,11 @@
     </ngx-charts-area-chart>
   </div>
   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-
+    <ngx-charts-pie-grid
+      [view]="pieView"
+      [scheme]="colorScheme"
+      [results]="pieChannels"
+      (select)="onSelect($event)">
+    </ngx-charts-pie-grid>
   </div>
 </div>
