--- a/src/app/pages/main-dashboard/dashboard.scss
+++ b/src/app/pages/main-dashboard/dashboard.scss
@@ -21,3 +21,32 @@
 .blurCalendar {
   height: 475px;
 }
+
+.pie-chart-item {
+  display: flex;
+  flex-direction: row;
+  font-size: 1.2rem;
+  .chart {
+    font-size: 2.5rem;
+  }
+  .description-stats {
+    font-size: 1.5rem;
+
+  }
+}
+
+.block-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10px 5px;
+}
+
+.route {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  cursor: pointer;
+}
