--- a/src/app/pages/main-dashboard/dashboard.html
+++ b/src/app/pages/main-dashboard/dashboard.html
@@ -1,11 +1,12 @@
 <div class="row pie-charts" *ngIf="totals">
-  <ba-card *ngFor="let total of totals" class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-12">
+  <ba-card *ngFor="let total of totals; let i = index"
+           class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-12">
     <div class="pie-chart-item">
       <div class="chart block-item">
-        <span [ngClass]="total.icon"></span>
+        <span [ngClass]="total.icon" [style.color]="colorScheme.domain[i]"></span>
       </div>
       <div class="description block-item">
-        <div translate>{{ total.description }}</div>
+        <div translate>{{ 'total.'+total.name | translate }}</div>
       </div>
       <div class="description-stats block-item">{{total.value}}</div>
     </div>
