--- a/src/app/pages/main-dashboard/total/total.component.html
+++ b/src/app/pages/main-dashboard/total/total.component.html
@@ -2,6 +2,7 @@
   <ba-card *ngFor="let total of totals; let i = index"
            class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-12">
     <div class="pie-chart-item">
+      <a class="details" [routerLink]="['dashboard/details/'+total.name]"></a>
       <div class="chart block-item">
         <span [ngClass]="total.icon" [style.color]="colorScheme.domain[i]"></span>
       </div>
