--- a/src/app/pages/main-dashboard/dashboard.component.html
+++ b/src/app/pages/main-dashboard/dashboard.component.html
@@ -1,1 +1,16 @@
+<div class="row pie-charts" *ngIf="totals">
+  <ba-card *ngFor="let total of totals; let i = index"
+           class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-12">
+    <div class="pie-chart-item">
+      <a class="details" [routerLink]="['details/'+total.name]" routerLinkActive="active"></a>
+      <div class="chart block-item">
+        <span [ngClass]="total.icon" [style.color]="colorScheme.domain[i]"></span>
+      </div>
+      <div class="description block-item">
+        <div translate>{{ 'total.'+total.name | translate }}</div>
+      </div>
+      <div class="description-stats block-item">{{total.value}}</div>
+    </div>
+  </ba-card>
+</div>
 <router-outlet></router-outlet>
