--- a/src/app/pages/main-dashboard/dashboard.component.scss
+++ b/src/app/pages/main-dashboard/dashboard.component.scss
@@ -35,3 +35,18 @@
   }
 }
 
+.block-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10px 5px;
+}
+
+.details {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  cursor: pointer;
+}
