--- a/src/app/pages/main-dashboard/total/total.component.html
+++ b/src/app/pages/main-dashboard/total/total.component.html
@@ -1,3 +1,18 @@
+<div class="row pie-charts" *ngIf="totals">
+  <ba-card *ngFor="let total of totals; let i = index"
+           class="pie-chart-item-container col-xlg-3 col-lg-3 col-md-6 col-sm-12 col-12">
+    <div class="pie-chart-item">
+      <a class="details" (click)="goToDetails(total.name)"></a>
+      <div class="chart block-item">
+        <span [ngClass]="total.icon" [style.color]="colorScheme.domain[i]"></span>
+      </div>
+      <div class="description block-item">
+        <div translate>{{ 'total.'+total.name | translate }}</div>
+      </div>
+      <div class="description-stats block-item">{{total.value}}</div>
+    </div>
+  </ba-card>
+</div>
 <div class="row">
   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
     <ngx-charts-area-chart
