--- a/src/app/pages/main-dashboard/details/details.component.scss
+++ b/src/app/pages/main-dashboard/details/details.component.scss
@@ -52,3 +52,22 @@
     }
   }
 }
+
+.zoom-buttons {
+  display: flex;
+  flex-direction: row;
+  margin-left: 55px;
+  .zoom-button {
+    padding: 7px;
+    margin: 5px;
+    color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 0;
+    border-radius: 7px;
+    position: relative;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
