--- a/src/app/pages/main-dashboard/details/details.component.html
+++ b/src/app/pages/main-dashboard/details/details.component.html
@@ -63,6 +63,7 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [curve]="curve"
+        [autoScale]="true"
         [timeline]="timeline"
         (select)="onSelect($event)">
       </ngx-charts-line-chart>
