--- a/src/app/pages/dashboard/details/details.component.scss
+++ b/src/app/pages/dashboard/details/details.component.scss
@@ -8,6 +8,42 @@
       fill: white;
     }
   }
+
+  .axis {
+    font-family: sans-serif;
+    fill: #d35400;
+    font-size: 12px;
+  }
+
+  .line {
+    fill: none;
+    stroke: #f1c40f;
+    stroke-width: 3px;
+  }
+
+  .smoothLine {
+    fill: none;
+    stroke: #e74c3c;
+    stroke-width: 3px;
+  }
+
+  .area {
+    fill: #e74c3c;
+    opacity: 0.5;
+  }
+
+  .circle {
+    stroke: #e74c3c;
+    stroke-width: 3px;
+    fill: #fff;
+  }
+
+  .grid {
+    stroke: #ddd;
+    stroke-width: 1px;
+    fill: none;
+  }
+
 }
 
 .capitalized {
