--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -1,5 +1,5 @@
 <div class="page-top clearfix" baScrollPosition maxHeight="50" (scrollChange)="scrolledChanged($event)"
      [ngClass]="{scrolled: isScrolled}">
-  <a routerLink="/pages/dashboard" class="al-logo clearfix"><span>BDI</span></a>
+  <a routerLink="/pages/dashboard" class="al-logo clearfix"><span>IBD</span></a>
   <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"></a>
 </div>
