--- a/src/app/pages/dashboard/details/details.component.html
+++ b/src/app/pages/dashboard/details/details.component.html
@@ -27,7 +27,7 @@
       <!--[xAxisTickFormatting]="xAxisTickFormatting"-->
       <!--(select)="onSelect($event)">-->
     <!--</ngx-charts-line-chart>-->
-    <svg id="real-time-chart"></svg>
+    <svg #realTime></svg>
   </div>
 </div>
 <div class="row">
